# Klip

./: .gitignore  CMakeLists.txt  Makefile  README.md  db.txt  main  main.cpp
src/: Auth.cpp  Auth.h  Creds.cpp  Creds.h  Database.cpp  Database.h  RecentDatabases.cpp  RecentDatabases.h  Security.cpp  Security.h  Ui.cpp  Ui.h  a.out  main.cpp
src/menu/: a.out  main.cpp2  main_menu.cpp  main_menu.h  menu.cpp  menu.h  number_menu.h  text_menu.cpp  text_menu.h
src/menu/core/: menu.cpp  menu.h  menu_render.cpp  menu_render.h  menu_render_primary.h
src/menu/main/: main_menu.cpp  main_menu.h  menu_render_main.cpp  menu_render_main.h
src/menu/number/: menu_render_number.h  number_menu.cpp  number_menu.h
src/menu/options/: menu_render_options.cpp  menu_render_options.h  option_menu.cpp  option_menu.h
src/menu/path/: path_menu.cpp  path_menu.h
src/menu/render/: menu_render.cpp  menu_render_main.cpp  menu_render_main.h  menu_render_number.cpp  menu_render_number.h  menu_render_primary.cpp  menu_render_primary.h  menu_render_secondary.cpp  menu_render_secondary.h  menu_render_text.h
src/menu/text/: menu_render_text.cpp  menu_render_text.h  text_menu.cpp  text_menu.h
src/term/: term.cpp  term.h
